project page: fixing hover state bug on project contrast element

--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -141,14 +141,17 @@
 }
 
 .project-page .project__shroud {
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+  z-index: 2;
   border-radius: 8px;
   overflow: hidden;
   transition: transform 0.125s cubic-bezier(0, 0.77, 0, 0.98);
 }
-.project-page .project:hover .project__shroud::after {
+.project-page .project:hover .project__shroud {
   transform: scale(1.07);
 }
 
@@ -162,8 +165,8 @@
   z-index: 2;
   background: linear-gradient(
     10deg,
-    #0e32e7,
-    #0e32e7 30%,
+    #31418c,
+    #31418c 30%,
     transparent 70%,
     transparent
   );
